--- a/Law/dlf/views/admin/Clients/client.html
+++ b/Law/dlf/views/admin/Clients/client.html
@@ -116,7 +116,7 @@
 									<div class="col-md-12 col-sm-12 col-xs-12">
 										<div class="col-md-6 col-sm-6 col-xs-12 form-group">
 											<label>Address Line 3 :</label>
-											<input type="text" class="form-control" name="address3" id="address3" ng-model="client.addclient.address_3" placeholder="Address Line 3">
+											<textarea  class="form-control" name="address3" id="address3" ng-model="client.addclient.address_3" placeholder="Address Line 3"></textarea>
 										</div>	
 										<div class="col-md-6 col-sm-6 col-xs-12 form-group">
 											<label>State :</label>
@@ -127,7 +127,7 @@
 											</select>
 										</div>										
 									</div>
-
+									
 									<div class="col-md-12 col-sm-12 col-xs-12">
 										<div class="col-md-6 col-sm-6 col-xs-12 form-group">
 											<label>City :</label>
@@ -156,4 +156,5 @@
 					</div>
 				</div>
 				<script type="text/javascript" src="./assets/js/admin-home.js"></script>
+				
 				<!--================================ right bar body ends =============================-->
