--- a/Law/dlf/views/register.html
+++ b/Law/dlf/views/register.html
@@ -20,7 +20,7 @@
 						<label>Middle Name:</label>
 						<input type="text" ng-model="register.user.middle_name" class="form-control" placeholder="Middle Name">
 					</div>
-				</div>
+				</div> 
 				<div class="col-md-4 col-sm-12 col-xs-12">
 					<div class="form-group">
 						<label>Last Name:</label>
@@ -92,6 +92,14 @@
 					<div class="form-group">
 						<label>Pincode:</label>
 						<input type="text" ng-model="register.user.pin_code" class="form-control" placeholder="Pincode">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 col-sm-12 col-xs-12">
+					<div class="form-group">
+						<label>Email Id:</label>
+						<input type="text" ng-model="register.user.email" class="form-control" placeholder="Email">
 					</div>
 				</div>
 			</div>
