--- a/Law/dlf/assets/css/register.css
+++ b/Law/dlf/assets/css/register.css
@@ -2,6 +2,12 @@
 {
 	font-family:  monospace;
 }
+.error
+{
+	color: red;
+	font-family: cursive;
+	font: bold;
+}
 .register_main_body
 {
 	border: 1px solid #FE2E1B;
