--- a/Law/dlf/views/register.html
+++ b/Law/dlf/views/register.html
@@ -100,6 +100,7 @@
 					<div class="form-group">
 						<label>Email Id:</label>
 						<input type="text" ng-model="register.user.email" class="form-control" placeholder="Email">
+						<span class="error">{{existingEmail}}</span>
 					</div>
 				</div>
 			</div>
